--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,8 @@
     <groupId>za.co.absa.shaded</groupId>
     <artifactId>absa-shaded</artifactId>
     <name>Absa Shaded Libraries</name>
-    <version>0.0.2-SNAPSHOT</version>
+    <version>0.0.1-SNAPSHOT</version>
+    <description>absa shaded artifacts</description>
 
     <parent>
         <groupId>za.co.absa</groupId>
@@ -87,7 +88,7 @@
                         </filters>
                         <transformers>
                             <!-- The service transformer is needed to merge META-INF/services files -->
-                            <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
+                            <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                             <!-- The ApacheNoticeResourceTransformer collects and aggregates NOTICE files -->
                             <transformer implementation="org.apache.maven.plugins.shade.resource.ApacheNoticeResourceTransformer">
                                 <projectName>Absa-shaded</projectName>
